testsuite/tests/rename/should_fail/T16610.stderr

T16610.hs:6:3: error:
    ‘wrong’ is not a (visible) method of class ‘Eq’
